--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
               <a href="./index.html" class="nav-item link">Studio</a>
             </li>
             <li class="list-item">
-              <a href="./portfolio.html" class="nav-item link">Portfolio</a>
+              <a href="./portfolio.html" class="nav-item current link"
+                >Portfolio</a
+              >
             </li>
             <li class="list-item">
               <a href="" class="nav-item link">Contacts</a>
@@ -77,121 +79,203 @@
           </ul>
           <ul class="list pic-list">
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/BankingAppInterfaceConcept.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Banking App Interface Concept</h2>
-                  <p class="paragraph">App</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/BankingAppInterfaceConcept.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Banking App Interface Concept</h2>
+                <p class="paragraph">App</p>
+              </div>
+            </li>
+
+            <li class="pic-item">
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/CashlessPayment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Cashless Payment</h2>
+                <p class="paragraph">Marketing</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/CashlessPayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Cashless Payment</h2>
-                  <p class="paragraph">Marketing</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/MeditationApp.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Meditation App</h2>
+                <p class="paragraph">App</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/MeditationApp.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Meditation App</h2>
-                  <p class="paragraph">App</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/TaxiService.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Taxi Service</h2>
+                <p class="paragraph">Marketing</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/TaxiService.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Taxi Service</h2>
-                  <p class="paragraph">Marketing</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/ScreenIllustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Screen Illustrations</h2>
+                <p class="paragraph">Design</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/ScreenIllustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Screen Illustrations</h2>
-                  <p class="paragraph">Design</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/OnlineCourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Online Courses</h2>
+                <p class="paragraph">Marketing</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/OnlineCourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Online Courses</h2>
-                  <p class="paragraph">Marketing</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/InstagramStoriesConcept.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Instagram Stories Concept</h2>
+                <p class="paragraph">Design</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/InstagramStoriesConcept.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Instagram Stories Concept</h2>
-                  <p class="paragraph">Design</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/OrganicFood.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Organic Food</h2>
+                <p class="paragraph">Web Site</p>
+              </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/OrganicFood.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Organic Food</h2>
-                  <p class="paragraph">Web Site</p>
+              <div class="card">
+                <a href="" class="link">
+                  <img
+                    src="./images/FreshCoffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                </a>
+                <div class="card-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-              </a>
-            </li>
-            <li class="pic-item">
-              <a href="" class="link">
-                <img
-                  src="./images/FreshCoffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
-                <div class="pic-text">
-                  <h2 class="pic">Fresh Coffee</h2>
-                  <p class="paragraph">Web Site</p>
-                </div>
-              </a>
+              </div>
+              <div class="pic-text">
+                <h2 class="pic">Fresh Coffee</h2>
+                <p class="paragraph">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
