--- a/index.html
+++ b/index.html
@@ -413,7 +413,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-button" data-modal-close>&times;</button>
+        <button class="modal-button" type="button" data-modal-close>
+          <svg class="close" width="8" heigth="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./modal.js"></script>
