--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
-          <svg class="close" width="8" heigth="8">
+          <svg class="close" width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
