--- a/portfolio.html
+++ b/portfolio.html
@@ -80,20 +80,21 @@
           <ul class="list pic-list">
             <li class="pic-item">
               <div class="card">
-                <a href="" class="link">
-                  <img
-                    src="./images/BankingAppInterfaceConcept.jpg"
-                    alt="Banking App Interface Concept"
-                    width="360"
-                  />
-                </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="picture">
+                  <a href="" class="link">
+                    <img
+                      src="./images/BankingAppInterfaceConcept.jpg"
+                      alt="Banking App Interface Concept"
+                      width="360"
+                    />
+                  </a>
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
+                <div class="card-overlay"></div>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Banking App Interface Concept</h2>
