--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,8 @@
                       width="360"
                     />
                   </a>
+                </div>
+                <div class="card-overlay">
                   <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
