--- a/portfolio.html
+++ b/portfolio.html
@@ -81,13 +81,18 @@
             <li class="pic-item">
               <div class="card">
                 <div class="picture">
-                  <a href="" class="link">
+                  <a href="" class="link pic-link">
                     <img
                       src="./images/BankingAppInterfaceConcept.jpg"
                       alt="Banking App Interface Concept"
                       width="360"
                     />
                   </a>
+                  <p class="overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-overlay">
                   <p class="overlay-paragraph">
