--- a/portfolio.html
+++ b/portfolio.html
@@ -94,13 +94,6 @@
                     App · Cloud Storage App
                   </p>
                 </div>
-                <div class="card-overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Banking App Interface Concept</h2>
@@ -110,7 +103,7 @@
 
             <li class="pic-item">
               <div class="card">
-                <a href="" class="link">
+                <a href="" class="link pic-link">
                   <img
                     src="./images/CashlessPayment.jpg"
                     alt="Cashless Payment"
