--- a/portfolio.html
+++ b/portfolio.html
@@ -88,11 +88,13 @@
                       width="360"
                     />
                   </a>
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                  <div class="overlay">
+                    <p class="overlay-paragraph">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="pic-text">
@@ -111,7 +113,7 @@
                   />
                 </a>
                 <div class="card-overlay">
-                  <p>
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
