--- a/portfolio.html
+++ b/portfolio.html
@@ -79,23 +79,20 @@
           </ul>
           <ul class="list pic-list">
             <li class="pic-item">
-              <div class="card">
-                <div class="picture">
-                  <a href="" class="link pic-link">
-                    <img
-                      src="./images/BankingAppInterfaceConcept.jpg"
-                      alt="Banking App Interface Concept"
-                      width="360"
-                    />
-                  </a>
-                  <div class="overlay">
-                    <p class="overlay-paragraph">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
+              <div class="picture">
+                <a href="" class="link pic-link">
+                  <img
+                    src="./images/BankingAppInterfaceConcept.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                </a>
+
+                <p class="overlay overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Banking App Interface Concept</h2>
@@ -104,7 +101,7 @@
             </li>
 
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link pic-link">
                   <img
                     src="./images/CashlessPayment.jpg"
@@ -112,7 +109,7 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
+                <div class="overlay">
                   <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -126,16 +123,16 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
-                <a href="" class="link">
+              <div class="picture">
+                <a href="" class="link pic-link">
                   <img
                     src="./images/MeditationApp.jpg"
                     alt="Meditation App"
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -148,16 +145,16 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
-                <a href="" class="link">
+              <div class="picture">
+                <a href="" class="link pic-link">
                   <img
                     src="./images/TaxiService.jpg"
                     alt="Taxi Service"
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -170,7 +167,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link">
                   <img
                     src="./images/ScreenIllustrations.jpg"
@@ -178,8 +175,8 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -192,7 +189,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link">
                   <img
                     src="./images/OnlineCourses.jpg"
@@ -200,8 +197,8 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -214,7 +211,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link">
                   <img
                     src="./images/InstagramStoriesConcept.jpg"
@@ -222,8 +219,8 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -236,7 +233,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link">
                   <img
                     src="./images/OrganicFood.jpg"
@@ -244,8 +241,8 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -258,7 +255,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <div class="card">
+              <div class="picture">
                 <a href="" class="link">
                   <img
                     src="./images/FreshCoffee.jpg"
@@ -266,8 +263,8 @@
                     width="360"
                   />
                 </a>
-                <div class="card-overlay">
-                  <p>
+                <div class="overlay">
+                  <p class="overlay-paragraph">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
