--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                   />
                 </a>
 
-                <p class="overlay overlay-paragraph">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -109,13 +109,12 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Cashless Payment</h2>
@@ -131,13 +130,12 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Meditation App</h2>
@@ -153,13 +151,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Taxi Service</h2>
@@ -175,13 +171,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Screen Illustrations</h2>
@@ -197,13 +191,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Online Courses</h2>
@@ -219,13 +211,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Instagram Stories Concept</h2>
@@ -241,13 +231,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Organic Food</h2>
@@ -263,13 +251,11 @@
                     width="360"
                   />
                 </a>
-                <div class="overlay">
-                  <p class="overlay-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="pic-text">
                 <h2 class="pic">Fresh Coffee</h2>
