--- a/portfolio.html
+++ b/portfolio.html
@@ -79,21 +79,21 @@
           </ul>
           <ul class="list pic-list">
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link pic-link">
+              <a href="" class="link pic-link">
+                <div class="picture">
                   <img
                     src="./images/BankingAppInterfaceConcept.jpg"
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-                </a>
 
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Banking App Interface Concept</h2>
                 <p class="paragraph">App</p>
