--- a/portfolio.html
+++ b/portfolio.html
@@ -101,162 +101,168 @@
             </li>
 
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link pic-link">
+              <a href="" class="link pic-link">
+                <div class="picture">
                   <img
                     src="./images/CashlessPayment.jpg"
                     alt="Cashless Payment"
                     width="360"
                   />
-                </a>
 
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Cashless Payment</h2>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link pic-link">
+              <a href="" class="link pic-link">
+                <div class="picture">
                   <img
                     src="./images/MeditationApp.jpg"
                     alt="Meditation App"
                     width="360"
                   />
-                </a>
 
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Meditation App</h2>
                 <p class="paragraph">App</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link pic-link">
+              <a href="" class="link pic-link">
+                <div class="picture">
                   <img
                     src="./images/TaxiService.jpg"
                     alt="Taxi Service"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Taxi Service</h2>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link">
+              <a href="" class="link">
+                <div class="picture">
                   <img
                     src="./images/ScreenIllustrations.jpg"
                     alt="Screen Illustrations"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Screen Illustrations</h2>
                 <p class="paragraph">Design</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link">
+              <a href="" class="link">
+                <div class="picture">
                   <img
                     src="./images/OnlineCourses.jpg"
                     alt="Online Courses"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Online Courses</h2>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link">
+              <a href="" class="link">
+                <div class="picture">
                   <img
                     src="./images/InstagramStoriesConcept.jpg"
                     alt="Instagram Stories Concept"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Instagram Stories Concept</h2>
                 <p class="paragraph">Design</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link">
+              <a href="" class="link">
+                <div class="picture">
                   <img
                     src="./images/OrganicFood.jpg"
                     alt="Organic Food"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Organic Food</h2>
                 <p class="paragraph">Web Site</p>
               </div>
             </li>
             <li class="pic-item">
-              <div class="picture">
-                <a href="" class="link">
+              <a href="" class="link">
+                <div class="picture">
                   <img
                     src="./images/FreshCoffee.jpg"
                     alt="Fresh Coffee"
                     width="360"
                   />
-                </a>
-                <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </a>
               <div class="pic-text">
                 <h2 class="pic">Fresh Coffee</h2>
                 <p class="paragraph">Web Site</p>
