--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
+              <a href="" class="link pic-link">
                 <div class="picture">
                   <img
                     src="./images/ScreenIllustrations.jpg"
@@ -185,7 +185,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
+              <a href="" class="link pic-link">
                 <div class="picture">
                   <img
                     src="./images/OnlineCourses.jpg"
@@ -206,7 +206,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
+              <a href="" class="link pic-link">
                 <div class="picture">
                   <img
                     src="./images/InstagramStoriesConcept.jpg"
@@ -227,7 +227,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
+              <a href="" class="link pic-link">
                 <div class="picture">
                   <img
                     src="./images/OrganicFood.jpg"
@@ -248,7 +248,7 @@
               </div>
             </li>
             <li class="pic-item">
-              <a href="" class="link">
+              <a href="" class="link pic-link">
                 <div class="picture">
                   <img
                     src="./images/FreshCoffee.jpg"
